# Apollo-Chatchat

./: .gitignore  README.md  pyproject.toml  release.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _integration_test.yml  _release.yml  _test.yml  close-issue.yml
docker/: Dockerfile
docs/contributing/: README.md  README_dev.md  agent.md  api.md  code.md  repo_structure.md  settings.md
libs/python-sdk/: pyproject.toml
libs/python-sdk/open_chatcaht/: _constants.py  api_client.py  exceptions.py  utils.py
libs/python-sdk/open_chatcaht/api/server/: server_client.py
libs/python-sdk/open_chatcaht/api/standard_openai/: standard_openai_client.py
libs/python-sdk/open_chatcaht/api/tools/: tool_client.py
libs/python-sdk/open_chatcaht/types/chat/: chat_feedback_param.py  file_chat_param.py  kb_chat_param.py
libs/python-sdk/open_chatcaht/types/knowledge_base/: create_knowledge_base_param.py  delete_knowledge_base_param.py  knowledge_base.py  recreate_vector_store_param.py  update_kb_info_param.py
libs/python-sdk/open_chatcaht/types/knowledge_base/doc/: delete_kb_docs_param.py  download_kb_doc_param.py  list_kb_docs_file_param.py  search_kb_docs_param.py  search_temp_docs_param.py  upload_kb_docs_param.py  upload_temp_docs_param.py
libs/python-sdk/open_chatcaht/types/knowledge_base/summary/: recreate_summary_vector_store_param.py  summary_doc_ids_to_vector_store_param.py  summary_file_to_vector_store_param.py
libs/python-sdk/open_chatcaht/types/tools/: call_tool_param.py
libs/python-sdk/tests/: chat_test.py
(+140 files in other folders)
