[tool.poetry]
name = "open_apollo_chatchat"
version = "0.3.0.20240708"
description = "Apollo-Chatchat SDK"
authors = ["Joseff531 <me.dev.marshall@gmail.com>"]
packages = [
    {include = "open_chatcaht"}
]



[tool.poetry.dependencies]
python = ">=3.8.1,<3.12,!=3.9.7"
pydantic = "^2.8.2"
openai = "^1.35.13"
httpx = "^0.27.0"
